Working on index config refactor. Fixed sample tests. https://github.com/dropchop-com/recyclone/issues/31